--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,7 +75,7 @@ select = [
     "D",  # pydocstyle
     "FIX",  # flake8-fixme
 ]
-ignore = ["TD003", "FBT003", "ISC001", "COM812", "E501", "RUF001", "D100", "D104"]
+ignore = ["TD003", "FBT003", "ISC001", "COM812", "E501", "RUF001", "D100", "D104", "FIX002"]
 
 [tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]
